# olympiad-ai-agent-exercise

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/olympiad_ai_agent_exercise/: agent.py  nodes.py  settings.py  tools.py
